<resources>
    <string name="app_name">Homework_3_6</string>
    <string name="app_name_2">Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="sebelep">Sebelep</string>
    <string name="feduk">FEDUK</string>
    <string name="_3_07">3:07</string>
    <string name="_2022">2022</string>
    <string name="дуло">Дуло</string>
    <string name="morgenshtern">MORGENSHTERN</string>
    <string name="talk_me_down">Talk Me Down</string>
    <string name="now_playing">Now Playing</string>
    <string name="blue_neighbourhood">Blue Neighbourhood</string>
</resources>